# rust_offbrand_synergy

./: .gitignore  Cargo.toml  build.rs
src/listener/: main.rs
src/listener/html_frontend/: listener_screen.html
src/resources/: base.js  decent_flat.css
src/server/: main.rs
src/server/html_frontend/: connection_screen.html
src/shared/: lib.rs
xdo-io/: Cargo.toml
xdo-io/src/: lib.rs
