[package]
name = "offbrand_synergy"
version = "0.1.0"
authors = ["Hand-of-Cthulhu <3rdhandofcthulhu@gmail.com>"]

[[bin]]
name="server"
path = "src/server/main.rs"

[[bin]]
name = "listener"
path = "src/listener/main.rs"
#linker = "ld.lld"

[lib]
name = "shared_consts"
path = "src/shared/lib.rs"

[dependencies]
enigo={git="https://github.com/enigo-rs/enigo.git"}
lazy_static="*"
web-view="*"
#byteorder="*"
regex="*"
bincode="*"
serde = "*"
serde_derive = "*"
serde_json="*"

simple-error="*"

enum_primitive = "*"
num-traits="*"

[target.'cfg(windows)'.dependencies]
winapi="0.3"

[target.'cfg(unix)'.dependencies]
xdo-io = {path="xdo-io/"}

[build-dependencies]
inline_assets = "*"